# activity-tracker-bot

./: Cargo.toml  README.md  dockerfile
src/: main.rs  prelude.rs
src/commands/: setup.rs
src/framework/: event.rs  mod.rs  on_error.rs
src/utils/: guild_exists.rs  guild_setup.rs  leaderboard.rs  mod.rs  mongo_crud.rs  setup.rs  sync_user_states.rs  user_event.rs
