[package]
name = "activity-tracker-bot"
version = "0.1.0"
edition = "2021"


[dependencies]
ascii_table = { version = "4.0.5", features = ["auto_table_width"] }
async-once-cell = "0.5.4"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = "0.4.38"
dotenvy = "0.15.7"
log = "0.4.22"
moka = { version = "0.12.8", features = ["sync"] }
mongodb = "3.1.0"
poise = "0.6.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
